implementing action ids for deletion

--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -57,11 +57,18 @@
                                 <Label Grid.Column="1"
                                        Text="{Binding ActionArrayFormatted}"
                                        VerticalOptions="Center" />
-                                <Button Grid.Column="2"
-                                        Text="{Binding IsSimulating, Converter={StaticResource BoolToTextConverter}}"
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ToggleSimulateActionGroupCommand}"
-                                        CommandParameter="{Binding .}"
-                                        VerticalOptions="Center" />
+                                <StackLayout Grid.Column="2"
+                                             Orientation="Vertical"
+                                             VerticalOptions="Center">
+                                    <Button Text="Start"
+                                            Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ToggleSimulateActionGroupCommand}"
+                                            CommandParameter="{Binding .}"
+                                            VerticalOptions="Center" />
+                                    <Button Text="Delete"
+                                            Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteActionGroupCommand}"
+                                            CommandParameter="{Binding .}"
+                                            VerticalOptions="Center" />
+                                </StackLayout>
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
