Added goal pull and load from backend

--- a/src/CSimple/Pages/GoalPage.xaml
+++ b/src/CSimple/Pages/GoalPage.xaml
@@ -24,7 +24,7 @@
                                           <CollectionView.ItemTemplate>
                                                  <DataTemplate>
                                                  <StackLayout>
-                                                        <Label Text="{Binding GoalText}" />
+                                                        <Label Text="{Binding .}" />
                                                  </StackLayout>
                                                  </DataTemplate>
                                           </CollectionView.ItemTemplate>
